# Fanboat

./: CMakeCache.txt  README.md  transferSrc.sh
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/ball_detector/: ballDebug.h  ballLocation.h  debugTimes.h
devel/include/fanboat_ll/: fanboatLL.h  fanboatMotors.h
devel/include/lab2/: angle.h  magnitude.h  mux_control.h  range.h  toggle.h
devel/include/landmark_self_sim/: landmarkLocation.h
devel/share/ball_detector/cmake/: ball_detector-msg-extras.cmake  ball_detector-msg-paths.cmake  ball_detectorConfig.cmake
devel/share/common-lisp/ros/ball_detector/msg/: _package.lisp  ballLocation.lisp  ball_detector-msg.asd  debugTimes.lisp
devel/share/common-lisp/ros/fanboat_ll/msg/: _package.lisp  _package_fanboatLL.lisp  _package_fanboatMotors.lisp  fanboatLL.lisp  fanboatMotors.lisp  fanboat_ll-msg.asd
devel/share/common-lisp/ros/lab2/msg/: _package.lisp  _package_angle.lisp  _package_magnitude.lisp  _package_mux_control.lisp  _package_range.lisp  _package_toggle.lisp  angle.lisp  lab2-msg.asd  magnitude.lisp  mux_control.lisp  range.lisp  toggle.lisp
devel/share/common-lisp/ros/landmark_self_sim/msg/: landmarkLocation.lisp
devel/share/fanboat_ll/cmake/: fanboat_ll-msg-extras.cmake  fanboat_ll-msg-paths.cmake  fanboat_llConfig.cmake
devel/share/lab1/cmake/: lab1Config.cmake
devel/share/lab2/cmake/: lab2-msg-extras.cmake  lab2-msg-paths.cmake  lab2Config.cmake
devel/share/lab3/cmake/: lab3Config.cmake
devel/share/landmark_self_sim/cmake/: landmark_self_sim-msg-extras.cmake  landmark_self_sim-msg-paths.cmake  landmark_self_simConfig.cmake
src/: servoSerial.ino  transferLab3.sh  transferWaypoint.sh
src/ball_detector/: CMakeLists.txt
src/ball_detector/launch/: ballDetector.launch
src/ball_detector/src/: ballDetector.cpp
src/fanboat_ll/: CMakeLists.txt  package.xml
src/fanboat_ll/msg/: fanboatLL.msg  fanboatMotors.msg
src/fanboat_ll/src/: arduino_serial.py  fanboat_serial.py
src/lab1/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/lab1/src/: forward.cpp  forward.launch  nurse_joy.cpp  nurse_joy.launch  turn.cpp  turn.launch
src/lab2/: CMakeLists.txt  package.xml
src/lab2/msg/: angle.msg  magnitude.msg  mux_control.msg  range.msg  toggle.msg
src/lab2/src/: angularPosition.launch  angularPositionPID.cpp  irRange.cpp  joy_splitter.cpp  mapping.cpp  mapping_mux.cpp  mixer.cpp  mux.cpp  mux_control.cpp  reactive_control.cpp  triangle.cpp
src/lab3/: CMakeLists.txt  labCamera3  package.xml
src/lab3/launch/: arbitrator.launch  ballCollection.launch  lab3.launch  lab3cameras.launch  visualServo.launch
src/lab3/msg/: fanboatControl.msg
src/lab3/src/: ball_follow.cpp  collection_switch.cpp  fanboat_interface.cpp  graphics_arbitrator.cpp  landmark_follow.cpp
src/landmark_self_sim/: CMakeLists.txt  package.xml
src/landmark_self_sim/launch/: landmarkSelfSim.launch  landmarkSelfSimNoCam.launch
src/landmark_self_sim/src/: landmarkDetector.cpp
src/waypoint/: CMakeLists.txt  Project Diagram  package.xml
src/waypoint/launch/: all.launch  waypoint.launch  waypointArrayTest.launch
src/waypoint/msg/: arduinoAngle.msg  fanboatInfo.msg  landmarkInfo.msg
src/waypoint/src/: arduino_search.cpp  arduino_serial.py  arduino_sweep.cpp  avoid.cpp  fanboat_info.cpp  landmark_info.cpp  pursue.cpp  search.cpp  servoSerial.ino  waypoint.cpp
src/waypoint/src/servoSerial/: servoSerial.ino
